--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "msw": "^1.2.1",
