add k8s manifest for admin deployment, update docker and pipeline

--- a/azure-pipeline-admin.yml
+++ b/azure-pipeline-admin.yml
@@ -78,13 +78,13 @@ stages:
       - task: replacetokens@5
         inputs:
           rootDirectory: '$(Build.SourcesDirectory)'
-          targetFiles: '**/apigateway.yaml'
+          targetFiles: '**/admin.yaml'
           encoding: 'auto'
           tokenPattern: 'azpipelines'
           writeBOM: true
-          actionOnMissing: 'warn'
+          actionOnMissing: 'fail'
           keepToken: false
-          actionOnNoFiles: 'warn'
+          actionOnNoFiles: 'fail'
           enableTransforms: false
           enableRecursion: false
           useLegacyPattern: false
